Fix flex + overflow bug

--- a/mystyle.css
+++ b/mystyle.css
@@ -171,19 +171,14 @@ a {
   padding: 1rem;
 }
 
-.two-col{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 400px;
+#two-col{
+  flex-direction: row;
   width: 90%;
   margin: auto;
+  align-items: stretch;
 }
-.two-col > div{
+#two-col .card{
   background-color: rgb(255, 255, 255);
-  text-align: center;
-  font-size: 30px;
-  margin-top: 10px;
-
 }
 .title-padding{
   padding: 20px 10px 0px 10px;
@@ -210,9 +205,9 @@ h4 {
   font-family: 'Cormorant Garamond', serif;
 }
 .image{
-  width: 100%;
-  height: 100%;
+  width: 50%;
   object-fit: cover;
+  flex: 1;
 }
 
 .imageBig{
@@ -231,6 +226,9 @@ a:link {
   width: 80px;
   margin: auto;
   margin-top: 10px;
+}
+.text-flex {
+  display: flex;
 }
 
 footer {
